Setup menu works.

--- a/web/index.html
+++ b/web/index.html
@@ -24,6 +24,8 @@
 		<script src="js/modernizr-2.0.6.js"></script>
 		<script src="js/jquery.dataTables.min.js"></script>
 		<script src="js/index.js"></script>
+		<script src="js/setup.js"></script>
+		<script src="js/setup-menu.js"></script>
 	</head>
 	<body class="no-js">
 		<script>
