--- a/web/index.html
+++ b/web/index.html
@@ -8,7 +8,7 @@
     <link href="css/print.css" type="text/css" rel="stylesheet" media="print" />
 		<link href="css/plugins/fancy-type/screen.css" type="text/css" rel="stylesheet" media="screen" />
 		<link href="css/plugins/tabs/screen.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-		<link href="css/plugins/buttons/screen.css" type="text/css" rel="stylesheet" media="screen" />
+<!--		<link href="css/plugins/buttons/screen.css" type="text/css" rel="stylesheet" media="screen" /> -->
 		<link rel="stylesheet" href="css/nav.css">
 		<!--[if IE]>
 			<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -26,6 +26,7 @@
 		<script src="js/index.js"></script>
 		<script src="js/setup.js"></script>
 		<script src="js/setup-menu.js"></script>
+		<script src="js/structure.js"></script>
 	</head>
 	<body class="no-js">
 		<script>
