Beginning work on getting the business setup code working

--- a/web/structure.html
+++ b/web/structure.html
@@ -4,7 +4,7 @@
 		<p>
 			<label for="parent-internal-name">Organization Name</label>
 			<input type="text" id="parent-internal-name" value="" />
-			<button id="create-parent-internal-org" class="button"><img src="/img/silk-icons/add.png" alt="" /> Create</button>
+			<button id="create-parent-internal-org" class="button"><img src="/img/silk-icons/add.png" />Create</button>
 		</p>
 	</form>
 </div>
